force-app/main/default/objects/Fund__c/fields/Active_Fund__c.field-meta.xml
<CustomField>
    <fullName>Active_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>אם דלוק - ניתן להגיש בקשה חדשה במסגרת הקרן, אם לא דלוק - לא ניתן</inlineHelpText>
    <label>Active Fund</label>
    <type>Checkbox</type>
</CustomField>