force-app/main/default/objects/Fund__c/fields/Budget_line__c.field-meta.xml
<CustomField>
    <fullName>Budget_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget line</label>
    <referenceTo>Budget_line__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>