force-app/main/default/objects/Fund__c/fields/Default_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Request_Amount__c</fullName>
    <description>This amount will be updated on requests from this fund</description>
    <label>Default Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>