force-app/main/default/objects/Fund__c/fields/Fund_type__c.field-meta.xml
<CustomField>
    <fullName>Fund_type__c</fullName>
    <label>Fund type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>המענק השיקומי המשלים</fullName>
            </value>
            <value>
                <fullName>סיוע חירום</fullName>
            </value>
            <value>
                <fullName>מלגת חוסן</fullName>
            </value>
            <value>
                <fullName>קרן נורד</fullName>
            </value>
            <value>
                <fullName>מענק יתומי אייבה</fullName>
            </value>
            <value>
                <fullName>מענק יתומים בנק לאומי</fullName>
            </value>
            <value>
                <fullName>המשפחה המאמצת ניו יורק</fullName>
            </value>
            <value>
                <fullName>ייעודי</fullName>
            </value>
            <value>
                <fullName>חרבות ברזל מענק חירום שבים</fullName>
            </value>
            <value>
                <fullName>סיוע חירום חרבות ברזל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>