force-app/main/default/objects/Fund__c/fields/Main_Fund__c.field-meta.xml
<CustomField>
    <fullName>Main_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>