force-app/main/default/objects/Fund__c/fields/Main_Fund_Total__c.field-meta.xml
<CustomField>
    <fullName>Main_Fund_Total__c</fullName>
    <label>Main Fund Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>