force-app/main/default/objects/Fund__c/fields/Total_accepted_requests__c.field-meta.xml
<CustomField>
    <fullName>Total_accepted_requests__c</fullName>
    <label>Total accepted requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>