force-app/main/default/objects/Fund__c/fields/Total_denied_requests__c.field-meta.xml
<CustomField>
    <fullName>Total_denied_requests__c</fullName>
    <label>Total denied requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>