force-app/main/default/objects/Fund__c/fields/Total_paid_amount_in_fund__c.field-meta.xml
<CustomField>
    <fullName>Total_paid_amount_in_fund__c</fullName>
    <label>Total paid amount in fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>