force-app/main/default/objects/Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund_type__c</columns>
    <columns>Total_accepted_requests__c</columns>
    <columns>Total_denied_requests__c</columns>
    <columns>Total_paid_amount_in_fund__c</columns>
    <columns>Total_related_requests__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>